--- a/IgorMonteiroTheMainWords/IgorMonteiroTheMainWords/IgorMonteiroTheMainWords.csproj
+++ b/IgorMonteiroTheMainWords/IgorMonteiroTheMainWords/IgorMonteiroTheMainWords.csproj
@@ -43,14 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infra\RSSReader.cs" />
+    <Compile Include="Infra\StringHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValueObjects\RSSItem.cs" />
+    <Compile Include="ValueObjects\WordCounter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Infra\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
